fixe localize conent and column spacing of GUI

--- a/css/localize.css
+++ b/css/localize.css
@@ -100,7 +100,7 @@ line-height:1.4;
     letter-spacing: 2px;
 }
 .landmark{
-  margin: 0% 0% 0% 0%;
+  margin: 0% 5%;
 }
 
 /* The animation code */
